--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 
        // buildConfigField("String", "API_KEY", API_KEY)
         Properties properties = new Properties()
-        properties.load(project.rootProject.file('local.properties').newDataInputStream())
+        properties.load(project.rootProject.file('gradle.properties').newDataInputStream())
 
         buildConfigField "String", "API_KEY", "\"${properties.getProperty('API_KEY')}\""
 
