--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 
     buildFeatures {
@@ -65,18 +65,18 @@ dependencies {
 
 
     //Room
-    def room_version = "2.5.0"
+    def room_version = "2.5.1"
 
     implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:2.5.0"
+    implementation "androidx.room:room-ktx:2.5.1"
     // To use Kotlin annotation processing tool (kapt)
     kapt "androidx.room:room-compiler:$room_version"
 
 
     //Lifecycle-aware coroutine scopes
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
 
 
     //Coroutines
@@ -85,7 +85,7 @@ dependencies {
 
 
     //kotlin fragment ktx
-    implementation "androidx.fragment:fragment-ktx:1.5.5"
+    implementation "androidx.fragment:fragment-ktx:1.5.6"
 
     //network response wrapper
     implementation "com.github.skydoves:sandwich:1.2.4"
@@ -107,4 +107,8 @@ dependencies {
     //glide
     implementation 'com.github.bumptech.glide:glide:4.15.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
+
+    //paging
+    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
+
 }
