--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,5 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 API_KEY=347b799f822f8dc93efbe14af280dc05
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
